修改了.env配置和添加了dotenv包

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CHATGLM3_API="https://u261496-b738-c31e3724.neimeng.seetacloud.com:6443"
+CHATGLM3_API="https://u261496-b738-c31e3724.neimeng.seetacloud.com:6443/glm"
